--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "express": "^4.16.3",
     "openzeppelin-solidity": "^1.12.0",
     "web3": "^1.0.0-beta.35"
+  },
+  "devDependencies": {
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0"
   }
 }
