--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Thom Richardson",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "openzeppelin-solidity": "^1.12.0",
     "web3": "^1.0.0-beta.35"
